--- a/.github/workflows/pubby.yml
+++ b/.github/workflows/pubby.yml
@@ -72,82 +72,82 @@ jobs:
               await page.setViewport({ width: 1920, height: 1080 });
 
               // Stage 1: Login
-              console.log("Stage 1: Navigating to login page:", loginUrl);
+              console.log('Stage 1: Navigating to login page:', loginUrl);
               await page.goto(loginUrl, { waitUntil: 'networkidle2', timeout: 60000 });
-              await safeScreenshot(page, \`screenshots/pubby_home_\${Date.now()}.png\`);
+              await safeScreenshot(page, `screenshots/pubby_home_${Date.now()}.png`);
 
-              console.log("Stage 1: Filling in login credentials...");
+              console.log('Stage 1: Filling in login credentials...');
               await page.type('input[name="email"]', username, { delay: 100 });
               await page.type('input[name="password"]', password, { delay: 100 });
-              await safeScreenshot(page, \`screenshots/pubby_credentials_filled_\${Date.now()}.png\`);
+              await safeScreenshot(page, `screenshots/pubby_credentials_filled_${Date.now()}.png`);
 
-              console.log("Stage 1: Submitting login form...");
+              console.log('Stage 1: Submitting login form...');
               await Promise.all([
                 page.click('button[type="submit"]'),
                 page.waitForNavigation({ waitUntil: 'networkidle2', timeout: 60000 })
               ]);
-              await safeScreenshot(page, \`screenshots/pubby_after_login_\${Date.now()}.png\`);
+              await safeScreenshot(page, `screenshots/pubby_after_login_${Date.now()}.png`);
 
               // Stage 2: Verify login
-              console.log("Stage 2: Verifying login...");
+              console.log('Stage 2: Verifying login...');
               const dash = await page.$('a.logout, .dashboard');
               if (!dash) {
-                console.error("Stage 2: Login may have failed — aborting.");
-                await safeScreenshot(page, \`screenshots/pubby_login_failed_\${Date.now()}.png\`);
+                console.error('Stage 2: Login may have failed — aborting.');
+                await safeScreenshot(page, `screenshots/pubby_login_failed_${Date.now()}.png`);
                 process.exit(1);
               }
 
               // Stage 3: Browse page
-              console.log("Stage 3: Navigating to browse page:", browseUrl);
+              console.log('Stage 3: Navigating to browse page:', browseUrl);
               await page.goto(browseUrl, { waitUntil: 'networkidle2', timeout: 60000 });
               await sleep(10000);
-              await safeScreenshot(page, \`screenshots/pubby_browse_\${Date.now()}.png\`);
+              await safeScreenshot(page, `screenshots/pubby_browse_${Date.now()}.png`);
 
               // Stage 4: Click Kindle Unlimited filter
-              console.log("Stage 4: Clicking 'Kindle Unlimited' filter…");
+              console.log('Stage 4: Clicking "Kindle Unlimited" filter…');
               await page.evaluate(() => {
                 const tag = Array.from(document.querySelectorAll('.browsing-tag'))
                   .find(t => t.querySelector('.label')?.innerText.trim() === 'Kindle Unlimited');
                 if (tag) tag.click();
               });
               await sleep(5000);
-              await safeScreenshot(page, \`screenshots/pubby_kindle_unlimited_\${Date.now()}.png\`);
+              await safeScreenshot(page, `screenshots/pubby_kindle_unlimited_${Date.now()}.png`);
 
               // Stage 5: Click Most Snaps filter
-              console.log("Stage 5: Clicking 'Most Snaps' filter…");
+              console.log('Stage 5: Clicking "Most Snaps" filter…');
               await page.evaluate(() => {
                 const tag = Array.from(document.querySelectorAll('.browsing-tag'))
                   .find(t => t.querySelector('.label')?.innerText.trim() === 'Most Snaps');
                 if (tag) tag.click();
               });
               await sleep(5000);
-              await safeScreenshot(page, \`screenshots/pubby_most_snaps_\${Date.now()}.png\`);
+              await safeScreenshot(page, `screenshots/pubby_most_snaps_${Date.now()}.png`);
 
               // Stage 6: Wait for books container
-              console.log("Stage 6: Waiting for books container…");
+              console.log('Stage 6: Waiting for books container…');
               await page.waitForSelector('.library-books-container', { visible: true, timeout: 60000 });
-              await safeScreenshot(page, \`screenshots/pubby_browse_loaded_\${Date.now()}.png\`);
+              await safeScreenshot(page, `screenshots/pubby_browse_loaded_${Date.now()}.png`);
               await sleep(5000);
 
               // Stage 7: Scroll to load more books
               for (let i = 0; i < 3; i++) {
-                console.log(\`Stage 7: Scrolling iteration \${i+1}\`);
+                console.log(`Stage 7: Scrolling iteration ${i+1}`);
                 await page.evaluate(() => window.scrollBy(0, window.innerHeight));
                 await sleep(3000);
-                await safeScreenshot(page, \`screenshots/pubby_scroll_\${i+1}_\${Date.now()}.png\`);
+                await safeScreenshot(page, `screenshots/pubby_scroll_${i+1}_${Date.now()}.png`);
               }
 
               // Stage 8: Extract recommended book titles
-              console.log("Stage 8: Extracting Recommended Books…");
+              console.log('Stage 8: Extracting Recommended Books…');
               const recommended = await page.evaluate(() =>
                 Array.from(document.querySelectorAll('.library-books-container .card .title-text'))
                   .map(el => el.innerText.trim())
               );
-              console.log("Stage 8: Recommended Books:", recommended);
-              await safeScreenshot(page, \`screenshots/pubby_books_extracted_\${Date.now()}.png\`);
+              console.log('Stage 8: Recommended Books:', recommended);
+              await safeScreenshot(page, `screenshots/pubby_books_extracted_${Date.now()}.png`);
 
               // Stage 9: Extract activity timeline
-              console.log("Stage 9: Extracting Activity Timeline…");
+              console.log('Stage 9: Extracting Activity Timeline…');
               const timeline = await page.evaluate(() =>
                 Array.from(document.querySelectorAll('.timeline .event'))
                   .map(ev => ({
@@ -155,11 +155,11 @@ jobs:
                     time: ev.querySelector('.time')?.innerText.trim() || ''
                   }))
               );
-              console.log("Stage 9: Activity Timeline:", timeline);
-              await safeScreenshot(page, \`screenshots/pubby_activity_extracted_\${Date.now()}.png\`);
+              console.log('Stage 9: Activity Timeline:', timeline);
+              await safeScreenshot(page, `screenshots/pubby_activity_extracted_${Date.now()}.png`);
 
               // Stage 10: Pick a Kindle Unlimited book
-              console.log("Stage 10: Scanning for Kindle Unlimited cards…");
+              console.log('Stage 10: Scanning for Kindle Unlimited cards…');
               const kuHandle = await page.evaluateHandle(xpath => {
                 const res = document.evaluate(xpath, document, null, XPathResult.ORDERED_NODE_SNAPSHOT_TYPE, null);
                 return Array.from({ length: res.snapshotLength }, (_, i) => res.snapshotItem(i));
@@ -173,10 +173,10 @@ jobs:
                 }
               }
               await sleep(2000);
-              await safeScreenshot(page, \`screenshots/pubby_ku_card_clicked_\${Date.now()}.png\`);
+              await safeScreenshot(page, `screenshots/pubby_ku_card_clicked_${Date.now()}.png`);
 
               // Stage 11: Click 'Pick Book'
-              console.log("Stage 11: Clicking 'Pick Book'…");
+              console.log('Stage 11: Clicking "Pick Book"…');
               const pickHandle = await page.evaluateHandle(xpath => {
                 const res = document.evaluate(xpath, document, null, XPathResult.ORDERED_NODE_SNAPSHOT_TYPE, null);
                 return Array.from({ length: res.snapshotLength }, (_, i) => res.snapshotItem(i));
@@ -190,35 +190,35 @@ jobs:
                 }
               }
               await sleep(2000);
-              await safeScreenshot(page, \`screenshots/pubby_pick_book_clicked_\${Date.now()}.png\`);
+              await safeScreenshot(page, `screenshots/pubby_pick_book_clicked_${Date.now()}.png`);
 
               // Stage 11b: Activate Reader and click current page
-              console.log("Stage 11b: Clicking 'Reader' tab…");
+              console.log('Stage 11b: Clicking "Reader" tab…');
               await page.evaluate(() => {
                 const tab = Array.from(document.querySelectorAll('.section-container .section-label'))
                   .find(el => el.innerText.trim() === 'Reader');
                 if (tab) tab.click();
               });
               await page.waitForSelector('.section-container .pages-container .page-label.current-page', { visible: true, timeout: 60000 });
-              await safeScreenshot(page, \`screenshots/pubby_reader_loaded_\${Date.now()}.png\`);
+              await safeScreenshot(page, `screenshots/pubby_reader_loaded_${Date.now()}.png`);
 
-              console.log("Stage 11b: Clicking current page in Reader…");
+              console.log('Stage 11b: Clicking current page in Reader…');
               const clickedReader = await page.evaluate(() => {
                 const curr = document.querySelector('.section-container .pages-container .page-label.current-page');
                 if (curr) { curr.click(); return true; }
                 return false;
               });
               if (!clickedReader) {
-                console.error("Stage 11b ERROR: Could not click current page in Reader");
+                console.error('Stage 11b ERROR: Could not click current page in Reader');
               } else {
-                await safeScreenshot(page, \`screenshots/pubby_reader_clicked_\${Date.now()}.png\`);
+                await safeScreenshot(page, `screenshots/pubby_reader_clicked_${Date.now()}.png`);
               }
 
               // Stage 12: Click 'View On Amazon' and capture popup
-              console.log("=== STAGE 12: View On Amazon (popup) DEBUG START ===");
+              console.log('=== STAGE 12: View On Amazon (popup) DEBUG START ===');
               await dumpPageInfo(page, 'before_click');
               await page.waitForSelector('.action.copy-amazon-link', { visible: true, timeout: 60000 });
-              await safeScreenshot(page, \`screenshots/pubby_before_amazon_\${Date.now()}.png\`);
+              await safeScreenshot(page, `screenshots/pubby_before_amazon_${Date.now()}.png`);
 
               try {
                 const rect = await page.evaluate(() => {
@@ -241,12 +241,12 @@ jobs:
                 await newPage.waitForNavigation({ waitUntil: 'networkidle2', timeout: 90000 });
                 console.log('Stage 12: Popup navigated, URL now:', newPage.url());
                 await dumpPageInfo(newPage, 'amazon_popup_after_nav');
-                await safeScreenshot(newPage, \`screenshots/pubby_amazon_tab_\${Date.now()}.png\`);
-                console.log("=== STAGE 12: View On Amazon (popup) DEBUG SUCCESS ===");
+                await safeScreenshot(newPage, `screenshots/pubby_amazon_tab_${Date.now()}.png`);
+                console.log('=== STAGE 12: View On Amazon (popup) DEBUG SUCCESS ===');
               } catch (err) {
-                console.error("!!! ERROR in STAGE 12 !!!", err);
+                console.error('!!! ERROR in STAGE 12 !!!', err);
                 await dumpPageInfo(page, 'stage12_error_main');
-                await safeScreenshot(page, \`screenshots/pubby_amazon_error_\${Date.now()}.png\`);
+                await safeScreenshot(page, `screenshots/pubby_amazon_error_${Date.now()}.png`);
               }
 
             } catch (err) {
@@ -255,7 +255,7 @@ jobs:
             } finally {
               if (page) {
                 try {
-                  fs.writeFileSync(\`debug/final_page_\${Date.now()}.html\`, await page.content());
+                  fs.writeFileSync(`debug/final_page_${Date.now()}.html`, await page.content());
                 } catch {}
               }
               if (browser) await browser.close();
