--- a/.github/workflows/pubby.yml
+++ b/.github/workflows/pubby.yml
@@ -23,7 +23,7 @@ jobs:
           npm init -y
           npm install puppeteer puppeteer-core puppeteer-extra puppeteer-extra-plugin-stealth fs
 
-      - name: Create Puppeteer script for Login, Browse & Pick Kindle Unlimited Book & View On Amazon (full debug & popup fix)
+      - name: Create Puppeteer script for Login, Browse & Pick Kindle Unlimited Book & View On Amazon (fixed login selector)
         run: |
           mkdir -p scripts screenshots debug
           cat > scripts/pubby-login-and-browse.js << 'EOL'
@@ -33,12 +33,12 @@ jobs:
           puppeteer.use(StealthPlugin());
 
           function sleep(ms) {
-            return new Promise(r => setTimeout(r, ms));
+            return new Promise(resolve => setTimeout(resolve, ms));
           }
 
           async function safeScreenshot(page, path) {
             try {
-              await page.screenshot({ path, fullPage: true });
+              await page.screenshot({ path: path, fullPage: true });
               console.log('Screenshot taken:', path);
             } catch (e) {
               console.error('Screenshot error:', e.message);
@@ -62,7 +62,6 @@ jobs:
           async function loginAndBrowse(loginUrl, browseUrl, username, password) {
             let browser, page;
             try {
-              // Launch browser maximized
               browser = await puppeteer.launch({
                 headless: 'new',
                 defaultViewport: null,
@@ -74,26 +73,30 @@ jobs:
               // Stage 1: Login
               console.log('Stage 1: Navigating to login page:', loginUrl);
               await page.goto(loginUrl, { waitUntil: 'networkidle2', timeout: 60000 });
-              await safeScreenshot(page, `screenshots/pubby_home_${Date.now()}.png`);
+              await safeScreenshot(page, 'screenshots/pubby_home_' + Date.now() + '.png');
 
               console.log('Stage 1: Filling in login credentials...');
               await page.type('input[name="email"]', username, { delay: 100 });
               await page.type('input[name="password"]', password, { delay: 100 });
-              await safeScreenshot(page, `screenshots/pubby_credentials_filled_${Date.now()}.png`);
+              await safeScreenshot(page, 'screenshots/pubby_credentials_filled_' + Date.now() + '.png');
 
               console.log('Stage 1: Submitting login form...');
               await Promise.all([
                 page.click('button[type="submit"]'),
                 page.waitForNavigation({ waitUntil: 'networkidle2', timeout: 60000 })
               ]);
-              await safeScreenshot(page, `screenshots/pubby_after_login_${Date.now()}.png`);
+              await safeScreenshot(page, 'screenshots/pubby_after_login_' + Date.now() + '.png');
 
-              // Stage 2: Verify login
-              console.log('Stage 2: Verifying login...');
-              const dash = await page.$('a.logout, .dashboard');
-              if (!dash) {
+              // Stage 2: Verify login by "Log Out" option
+              console.log('Stage 2: Verifying login using "Log Out" selector...');
+              const hasLogout = await page.evaluate(() => {
+                const options = Array.from(document.querySelectorAll('div.option'));
+                return options.some(el => el.innerText.trim() === 'Log Out');
+              });
+              console.log('Stage 2: Found "Log Out"?', hasLogout);
+              if (!hasLogout) {
                 console.error('Stage 2: Login may have failed — aborting.');
-                await safeScreenshot(page, `screenshots/pubby_login_failed_${Date.now()}.png`);
+                await safeScreenshot(page, 'screenshots/pubby_login_failed_' + Date.now() + '.png');
                 process.exit(1);
               }
 
@@ -101,7 +104,7 @@ jobs:
               console.log('Stage 3: Navigating to browse page:', browseUrl);
               await page.goto(browseUrl, { waitUntil: 'networkidle2', timeout: 60000 });
               await sleep(10000);
-              await safeScreenshot(page, `screenshots/pubby_browse_${Date.now()}.png`);
+              await safeScreenshot(page, 'screenshots/pubby_browse_' + Date.now() + '.png');
 
               // Stage 4: Click Kindle Unlimited filter
               console.log('Stage 4: Clicking "Kindle Unlimited" filter…');
@@ -111,7 +114,7 @@ jobs:
                 if (tag) tag.click();
               });
               await sleep(5000);
-              await safeScreenshot(page, `screenshots/pubby_kindle_unlimited_${Date.now()}.png`);
+              await safeScreenshot(page, 'screenshots/pubby_kindle_unlimited_' + Date.now() + '.png');
 
               // Stage 5: Click Most Snaps filter
               console.log('Stage 5: Clicking "Most Snaps" filter…');
@@ -121,20 +124,20 @@ jobs:
                 if (tag) tag.click();
               });
               await sleep(5000);
-              await safeScreenshot(page, `screenshots/pubby_most_snaps_${Date.now()}.png`);
+              await safeScreenshot(page, 'screenshots/pubby_most_snaps_' + Date.now() + '.png');
 
               // Stage 6: Wait for books container
               console.log('Stage 6: Waiting for books container…');
               await page.waitForSelector('.library-books-container', { visible: true, timeout: 60000 });
-              await safeScreenshot(page, `screenshots/pubby_browse_loaded_${Date.now()}.png`);
+              await safeScreenshot(page, 'screenshots/pubby_browse_loaded_' + Date.now() + '.png');
               await sleep(5000);
 
               // Stage 7: Scroll to load more books
               for (let i = 0; i < 3; i++) {
-                console.log(`Stage 7: Scrolling iteration ${i+1}`);
+                console.log('Stage 7: Scrolling iteration ' + (i+1));
                 await page.evaluate(() => window.scrollBy(0, window.innerHeight));
                 await sleep(3000);
-                await safeScreenshot(page, `screenshots/pubby_scroll_${i+1}_${Date.now()}.png`);
+                await safeScreenshot(page, 'screenshots/pubby_scroll_' + (i+1) + '_' + Date.now() + '.png');
               }
 
               // Stage 8: Extract recommended book titles
@@ -144,7 +147,7 @@ jobs:
                   .map(el => el.innerText.trim())
               );
               console.log('Stage 8: Recommended Books:', recommended);
-              await safeScreenshot(page, `screenshots/pubby_books_extracted_${Date.now()}.png`);
+              await safeScreenshot(page, 'screenshots/pubby_books_extracted_' + Date.now() + '.png');
 
               // Stage 9: Extract activity timeline
               console.log('Stage 9: Extracting Activity Timeline…');
@@ -156,7 +159,7 @@ jobs:
                   }))
               );
               console.log('Stage 9: Activity Timeline:', timeline);
-              await safeScreenshot(page, `screenshots/pubby_activity_extracted_${Date.now()}.png`);
+              await safeScreenshot(page, 'screenshots/pubby_activity_extracted_' + Date.now() + '.png');
 
               // Stage 10: Pick a Kindle Unlimited book
               console.log('Stage 10: Scanning for Kindle Unlimited cards…');
@@ -173,7 +176,7 @@ jobs:
                 }
               }
               await sleep(2000);
-              await safeScreenshot(page, `screenshots/pubby_ku_card_clicked_${Date.now()}.png`);
+              await safeScreenshot(page, 'screenshots/pubby_ku_card_clicked_' + Date.now() + '.png');
 
               // Stage 11: Click 'Pick Book'
               console.log('Stage 11: Clicking "Pick Book"…');
@@ -190,7 +193,7 @@ jobs:
                 }
               }
               await sleep(2000);
-              await safeScreenshot(page, `screenshots/pubby_pick_book_clicked_${Date.now()}.png`);
+              await safeScreenshot(page, 'screenshots/pubby_pick_book_clicked_' + Date.now() + '.png');
 
               // Stage 11b: Activate Reader and click current page
               console.log('Stage 11b: Clicking "Reader" tab…');
@@ -200,8 +203,7 @@ jobs:
                 if (tab) tab.click();
               });
               await page.waitForSelector('.section-container .pages-container .page-label.current-page', { visible: true, timeout: 60000 });
-              await safeScreenshot(page, `screenshots/pubby_reader_loaded_${Date.now()}.png`);
-
+              await safeScreenshot(page, 'screenshots/pubby_reader_loaded_' + Date.now() + '.png');
               console.log('Stage 11b: Clicking current page in Reader…');
               const clickedReader = await page.evaluate(() => {
                 const curr = document.querySelector('.section-container .pages-container .page-label.current-page');
@@ -211,14 +213,14 @@ jobs:
               if (!clickedReader) {
                 console.error('Stage 11b ERROR: Could not click current page in Reader');
               } else {
-                await safeScreenshot(page, `screenshots/pubby_reader_clicked_${Date.now()}.png`);
+                await safeScreenshot(page, 'screenshots/pubby_reader_clicked_' + Date.now() + '.png');
               }
 
               // Stage 12: Click 'View On Amazon' and capture popup
               console.log('=== STAGE 12: View On Amazon (popup) DEBUG START ===');
               await dumpPageInfo(page, 'before_click');
               await page.waitForSelector('.action.copy-amazon-link', { visible: true, timeout: 60000 });
-              await safeScreenshot(page, `screenshots/pubby_before_amazon_${Date.now()}.png`);
+              await safeScreenshot(page, 'screenshots/pubby_before_amazon_' + Date.now() + '.png');
 
               try {
                 const rect = await page.evaluate(() => {
@@ -240,13 +242,12 @@ jobs:
                 await dumpPageInfo(newPage, 'amazon_popup_before_nav');
                 await newPage.waitForNavigation({ waitUntil: 'networkidle2', timeout: 90000 });
                 console.log('Stage 12: Popup navigated, URL now:', newPage.url());
-                await dumpPageInfo(newPage, 'amazon_popup_after_nav');
-                await safeScreenshot(newPage, `screenshots/pubby_amazon_tab_${Date.now()}.png`);
+                await safeScreenshot(newPage, 'screenshots/pubby_amazon_tab_' + Date.now() + '.png');
                 console.log('=== STAGE 12: View On Amazon (popup) DEBUG SUCCESS ===');
               } catch (err) {
                 console.error('!!! ERROR in STAGE 12 !!!', err);
                 await dumpPageInfo(page, 'stage12_error_main');
-                await safeScreenshot(page, `screenshots/pubby_amazon_error_${Date.now()}.png`);
+                await safeScreenshot(page, 'screenshots/pubby_amazon_error_' + Date.now() + '.png');
               }
 
             } catch (err) {
@@ -255,7 +256,7 @@ jobs:
             } finally {
               if (page) {
                 try {
-                  fs.writeFileSync(`debug/final_page_${Date.now()}.html`, await page.content());
+                  fs.writeFileSync('debug/final_page_' + Date.now() + '.html', await page.content());
                 } catch {}
               }
               if (browser) await browser.close();
@@ -282,7 +283,7 @@ jobs:
           PUBBY_USERNAME: ${{ secrets.PUBBY_USERNAME }}
           PUBBY_PASSWORD: ${{ secrets.PUBBY_PASSWORD }}
         run: |
-          echo "Starting debug run at $(date)"
+          echo "Starting debug run at \$(date)"
           node scripts/pubby-login-and-browse.js | tee debug/script_output.log
 
       - name: Upload debug artifacts
